# supplementbot

./: .env.example  .gitignore  CONCERNS.md  PROPOSAL.md  README.md  ROADMAP.md  TECHNICAL.md  run_ingredients.sh
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/curriculum/: Cargo.toml
crates/curriculum/src/: agent.rs  lib.rs  questions.rs
crates/event-log/: Cargo.toml
crates/event-log/src/: events.rs  sink.rs
crates/extraction/: Cargo.toml
crates/extraction/src/: lib.rs  parser.rs  prompt.rs
crates/graph-service/: Cargo.toml
crates/graph-service/src/: export.rs  graph.rs  lens.rs  lib.rs  merge.rs  query.rs  registry.rs  source.rs  types.rs
crates/graph-service/src/intake/: engine.rs  executor.rs  idisk.rs  mod.rs  seed.rs  store.rs  types.rs
crates/intake-agent/: Cargo.toml
crates/intake-agent/src/: candidates.rs  concept_map.rs  context.rs  differentiator.rs  lib.rs  phase.rs  safety.rs  session.rs
crates/llm-client/: Cargo.toml
crates/llm-client/src/: anthropic.rs  fallback.rs  gemini.rs  lib.rs  mock.rs  provider.rs  xai.rs
crates/log-viewer/: Cargo.toml
crates/log-viewer/src/: main.rs
crates/nsai-loop/: Cargo.toml
crates/nsai-loop/src/: analyzer.rs  citations.rs  comprehension.rs  confidence.rs  forward_chain.rs  lib.rs  loop_runner.rs  prompts.rs  speculative.rs  structural.rs  synonym.rs
crates/nsai-loop/tests/: pipeline_contract.rs
crates/suppkg/: Cargo.toml
crates/suppkg/src/: kg.rs  lib.rs  types.rs
crates/umls-client/: Cargo.toml
crates/umls-client/src/: lib.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: explore.rs  extract.rs  handler.rs  main.rs  session_mgr.rs  state.rs  symptom_resolver.rs  ws.rs
docs/: CONCERNS.md  INTAKE.md  INTAKE_AGENT.md  INTAKE_KG.md  LEARNED.md  PROBLEMS.md  QUERY_LAYER.md  RESOURCES.md  ROADMAP.md  TECHNICAL.md
