[package]
name = "supplementbot-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "supplementbot"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
dotenvy = "0.15"
curriculum = { path = "../curriculum" }
event-log = { path = "../event-log" }
extraction = { path = "../extraction" }
graph-service = { path = "../graph-service" }
serde_json = "1"
nsai-loop = { path = "../nsai-loop" }
suppkg = { path = "../suppkg" }
llm-client = { path = "../llm-client", features = ["mock"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
