[package]
name = "curriculum"
version = "0.1.0"
edition = "2021"

[dependencies]
event-log = { path = "../event-log" }
llm-client = { path = "../llm-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
llm-client = { path = "../llm-client", features = ["mock"] }
