[package]
name = "graph-service"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
petgraph = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "3", default-features = false, features = ["kv-rocksdb", "kv-mem"] }
surrealdb-types = "3"
tokio = { version = "1", features = ["rt"] }
uuid = { version = "1", features = ["v4"] }
