[package]
name = "intake-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
graph-service = { path = "../graph-service" }
regex = "1"
tokio = { version = "1", features = ["rt"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
llm-client = { path = "../llm-client", features = ["mock"] }
tokio = { version = "1", features = ["full"] }
