[package]
name = "llm-client"
version = "0.1.0"
edition = "2021"

[features]
mock = []

[dependencies]
async-trait = "0.1"
event-log = { path = "../event-log" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
