[package]
name = "nsai-loop"
version = "0.1.0"
edition = "2021"

[dependencies]
event-log = { path = "../event-log" }
extraction = { path = "../extraction" }
graph-service = { path = "../graph-service" }
llm-client = { path = "../llm-client" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
llm-client = { path = "../llm-client", features = ["mock"] }
