[package]
name = "nsai-loop"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
event-log = { path = "../event-log" }
extraction = { path = "../extraction" }
graph-service = { path = "../graph-service" }
llm-client = { path = "../llm-client" }
suppkg = { path = "../suppkg" }
tokio = { version = "1", features = ["full"] }
umls-client = { path = "../umls-client" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
llm-client = { path = "../llm-client", features = ["mock"] }
