[package]
name = "supplementbot-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "supplementbot-web"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
dotenvy = "0.15"
graph-service = { path = "../graph-service" }
intake-agent = { path = "../intake-agent" }
llm-client = { path = "../llm-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
